--- a/base/templates/base/sidebar.html
+++ b/base/templates/base/sidebar.html
@@ -14,7 +14,7 @@
           </li>
           <li style="font-size: 18px;" class="p-3 mb-2 hover:bg-gray-500 rounded-lg">
               <i class="fa-regular fa-eye" style="color: white; font-size: 22px;"></i>
-              <span class=" ms-3">Explore</span>
+              <a href="{% url 'explore' %}" class=" ms-3">Explore</a>
           </li>
           <li style="font-size: 18px;" class="p-3 mb-2 hover:bg-gray-500 rounded-lg">
               <i class="fa-solid fa-clapperboard" style="color: white; font-size: 22px;"></i>
